kubernetes/base/network-policies/allow-backend-to-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-backend-to-postgres

spec:
  podSelector:
    matchLabels:
      app: securecart
      component: database

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: securecart
            matchExpressions:
              - key: component
                operator: In
                values:
                  - backend
                  - database-migration

      ports:
        - protocol: TCP
          port: 5432
