kubernetes/base/network-policies/allow-frontend-to-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend

spec:
  podSelector:
    matchLabels:
      app: securecart
      component: backend

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: securecart
              component: frontend

      ports:
        - protocol: TCP
          port: 8000
